--- a/assignment1.html
+++ b/assignment1.html
@@ -20,9 +20,9 @@
                 
                 <h3>Contact Info</h3>
                 <ul>
-                    <li><strong>Email:</strong>Alex@GrahamSG.com</li>
-                    <li><strong>GitHub:</strong>sample name</li>
-                    <li><strong>Portfolio</strong>coming soon</li>
+                    <li><strong>Email:</strong><a href="Alex@GrahamSG.com" target="_blank">Alex@GrahamSG.com</a></li>
+                    <li><strong>GitHub:</strong><a href="github.com" target="_blank">sample name</a></li>
+                    <li><strong>Portfolio:</strong>Coming Soon</li>
                 </ul>
             
 
